//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String [not null]
  lastname String [not null]
  phone String [not null]
  birthday DateTime [not null]
  street String [not null]
  city String [not null]
  state String [not null]
  zip_code String [not null]
  role Role [not null]
  tickets wintour_tickets [not null]
}

Table customers {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  acao_cli String
  razao_social String [not null]
  tipo_endereco String
  endereco String
  numero String
  complemento String
  bairro String
  cep String
  cidade String
  estado String
  tipo_fj String
  dt_nasc DateTime
  tel String
  celular String
  cpf_cnpj String [unique]
  insc_identidade String
  sexo String
  dt_cadastro DateTime
  email String [unique]
  tickets wintour_tickets [not null]
}

Table wintour_headers {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  nr_arquivo String [unique, not null]
  data_geracao String [not null]
  hora_geracao String [not null]
  nome_agencia String [not null]
  versao_xml Int [not null, default: 4]
  integration_status String
  integration_protocol String
  integration_raw_response String
  tickets wintour_tickets [not null]
}

Table wintour_tickets {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  header wintour_headers
  header_id String
  user users
  user_id String
  customer_record customers
  customer_id String
  idv_externo String
  id_posto_atendimento Int
  posto_atendimento String
  dt_interna_cadastro DateTime
  data_lancamento DateTime
  codigo_produto String
  fornecedor String
  prestador_svc String
  num_bilhete String
  localizador String
  tour_code String
  forma_de_pagamento String
  cartao_mp String
  cartao_cp String
  conta_taxas_adicionais String
  conta_taxas_adicionais2 String
  cod_outras_txs String
  cod_outras_txs2 String
  cod_outras_txs3 String
  cta_tx_emissao String
  ccustos_agencia String
  moeda String [default: 'BRL']
  emissor String
  promotor String
  gerente String
  cliente String
  ccustos_cliente String
  numero_requisicao String
  data_requisicao DateTime
  passageiro String
  tipo_passageiro String
  solicitante String
  aprovador String
  departamento String
  matricula String
  num_cc String
  cod_autorizacao_cc String
  tipo_domest_inter String [default: 'D']
  scdp String
  info_adicionais String
  info_internas String
  canal_captacao String
  cta_du_rav String [default: 'TX-DU']
  situacao_contabil String
  projeto String
  motivo_viagem String
  motivo_recusa String
  tipo_roteiro_aereo String
  destino_rot_aereo String
  canal_venda String
  multi_ccustos_cli String
  tipo_roteiro Int
  tarifa_net Int
  tipo_emissao String [default: 'E']
  co2_kg Float
  cid_dest_principal String
  apportionments wintour_apportionments [not null]
  sales_origins wintour_sales_origins [not null]
  conjugates wintour_ticket_conjugates [not null]
  values wintour_values [not null]
  expiry_dates wintour_expiries [not null]
  air_data wintour_airs
  hotel_data wintour_hotels
  location_data wintour_locations
  package_data wintour_packages
  other_services wintour_other_services
  transfer_data wintour_transfers
  customer_data wintour_customer_data
  wintour_other wintour_others
}

Table wintour_apportionments {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  ticket wintour_tickets [not null]
  ccustos_cliente String [not null]
  percentual Float [not null]
}

Table wintour_sales_origins {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  ticket wintour_tickets [not null]
  item Int [not null]
}

Table wintour_ticket_conjugates {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  ticket wintour_tickets [not null]
  item String [not null]
}

Table wintour_values {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  ticket wintour_tickets [not null]
  codigo String [not null]
  valor Float [not null]
  valor_df Float
  valor_mp Float
}

Table wintour_expiries {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  ticket wintour_tickets [not null]
  codigo String [not null]
  valor DateTime [not null]
}

Table wintour_airs {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  sections wintour_sections [not null]
}

Table wintour_sections {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  air_id String [not null]
  air wintour_airs [not null]
  cia_iata String [not null]
  numero_voo String
  aeroporto_origem String [not null]
  aeroporto_destino String [not null]
  data_partida DateTime
  hora_partida String
  data_chegada DateTime
  hora_chegada String
  classe String
  base_tarifaria String
  ticket_designator String
  conexao_arp_partida Int
  conexao_arp_chegada Int
  co2_kg Float
}

Table wintour_hotels {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  nr_apts Int
  categ_apt String
  tipo_apt String
  dt_check_in DateTime
  dt_check_out DateTime
  nr_hospedes Int
  reg_alimentacao String
  cod_tipo_pagto String
  dt_confirmacao DateTime
  confirmado_por String
}

Table wintour_locations {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  cidade_retirada String
  local_retirada String
  dt_retirada DateTime
  hr_retirada String
  local_devolucao String
  dt_devolucao DateTime
  hr_devolucao String
  categ_veiculo String
  cod_tipo_pagto String
  dt_confirmacao DateTime
  confirmado_por String
}

Table wintour_others {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  descricao String [not null]
}

Table wintour_transfers {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  hotel_transfer_in String
  cia_iata_chegada String
  numero_voo_chegada String
  data_chegada_voo DateTime
  hora_chegada_voo String
  aeroporto_chegada String
  hotel_transfer_out String
  data_apanhar_pax DateTime
  hora_apanhar_pax String
  cia_iata_partida String
  numero_voo_partida String
  data_partida_voo DateTime
  hora_partida_voo String
  aeroporto_partida String
}

Table wintour_packages {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  cid_dest_principal String
  data_inicio_pacote DateTime
  data_fim_pacote DateTime
  descricao_pacote String
}

Table wintour_other_services {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  cid_dest_principal String
  data_inicio_outros_svcs DateTime
  data_fim_outros_svcs DateTime
  descricao_outros_svcs String
}

Table wintour_customer_data {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  acao_cli String
  razao_social String
  tipo_endereco String
  endereco String
  numero String
  complemento String
  bairro String
  cep String
  cidade String
  estado String
  tipo_fj String
  dt_nasc DateTime
  tel String
  celular String
  cpf_cnpj String
  insc_identidade String
  sexo String
  dt_cadastro DateTime
  email String
}

Enum Role {
  ADMIN
  USER
}

Ref: wintour_tickets.header_id > wintour_headers.id

Ref: wintour_tickets.user_id > users.id

Ref: wintour_tickets.customer_id > customers.id

Ref: wintour_apportionments.ticket_id > wintour_tickets.id

Ref: wintour_sales_origins.ticket_id > wintour_tickets.id

Ref: wintour_ticket_conjugates.ticket_id > wintour_tickets.id

Ref: wintour_values.ticket_id > wintour_tickets.id

Ref: wintour_expiries.ticket_id > wintour_tickets.id

Ref: wintour_airs.ticket_id - wintour_tickets.id

Ref: wintour_sections.air_id > wintour_airs.id

Ref: wintour_hotels.ticket_id - wintour_tickets.id

Ref: wintour_locations.ticket_id - wintour_tickets.id

Ref: wintour_others.ticket_id - wintour_tickets.id

Ref: wintour_transfers.ticket_id - wintour_tickets.id

Ref: wintour_packages.ticket_id - wintour_tickets.id

Ref: wintour_other_services.ticket_id - wintour_tickets.id

Ref: wintour_customer_data.ticket_id - wintour_tickets.id